refactor: make native build scripts declarative